First remap implementation
Does cut of the bottom of characters for some reason

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,8 @@
 
+cmake_minimum_required(VERSION 3.22)
+
+project(neo_font_editor)
+
 add_subdirectory(lib/neofontlib)
 
 add_executable(
@@ -6,6 +10,7 @@ add_executable(
     src/main.cpp
     src/dump.cpp
     src/fileutils.cpp
+    src/remap.cpp
     )
 
 target_link_libraries(
@@ -17,3 +22,5 @@ target_compile_features(
     neo_font_lib
     PUBLIC
     cxx_std_20)
+
+file(COPY remap-scheme.md DESTINATION .)
