--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, windows-latest] #macos-latest,
 
     runs-on: ${{ matrix.os }}
 
@@ -46,12 +46,12 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Upload Release Asset (Linux/Mac)
-      if: startsWith(github.ref, 'refs/tags/v') && (matrix.os == 'ubuntu-latest' || matrix.os == 'macos-latest')
+      if: startsWith(github.ref, 'refs/tags/v') && (matrix.os == 'ubuntu-latest') # || matrix.os == 'macos-latest')
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ${{github.workspace}}/build/font_editor
-        asset_name: neo-font-editor-${{ matrix.os }}
+        asset_name: neo-font-editor #-${{ matrix.os }}
         asset_content_type: application/octet-stream
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
