--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,14 +13,14 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest] #macos-latest,
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v2
       with:
-         submodules: recursive
+        submodules: recursive
 
     - name: Configure CMake
       run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
@@ -32,8 +32,17 @@ jobs:
       working-directory: ${{github.workspace}}/build
       run: ctest -C ${{env.BUILD_TYPE}} --rerun-failed --output-on-failure
 
+    - name: Archive Production Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: font_editor-${{ matrix.os }}
+        path: ${{github.workspace}}/build/font_editor${{ matrix.os == 'windows-latest' && '.exe' || '' }}
+
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
     - name: Create GitHub Release
-      if: startsWith(github.ref, 'refs/tags/v') && (matrix.os == 'ubuntu-latest')
       id: create_release
       uses: actions/create-release@v1
       with:
@@ -45,13 +54,35 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Upload Release Asset
-      if: startsWith(github.ref, 'refs/tags/v')
+    - name: Download All Artifacts
+      uses: actions/download-artifact@v2
+
+    - name: Upload Release Assets
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ${{github.workspace}}/build/font_editor${{ matrix.os == 'windows-latest' && '.exe' || '' }}
-        asset_name: neo-font-editor-${{ matrix.os }}${{ matrix.os == 'windows-latest' && '.exe' || '' }}
+        asset_path: ./font_editor-ubuntu-latest
+        asset_name: neo-font-editor-ubuntu-latest
+        asset_content_type: application/octet-stream
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Upload Release Assets
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./font_editor-macos-latest
+        asset_name: neo-font-editor-macos-latest
+        asset_content_type: application/octet-stream
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Upload Release Assets
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./font_editor-windows-latest.exe
+        asset_name: neo-font-editor-windows-latest.exe
         asset_content_type: application/octet-stream
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
